Asteroids being created and destroyed while moving.
Now all the asteroids are objects with a predefined position in the world that are instantiated and deleted according to some threshold specified by the user.

--- a/.gitignore
+++ b/.gitignore
@@ -451,5 +451,9 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
-
 # End of https://www.gitignore.io/api/git,unity,macos,csharp
+
+# Ignore Specific Folders
+Assets/FreeMountain
+Assets/AsteroidPack
+Library/
